--- a/NNProject1.Tests/NNProject1.Tests.csproj
+++ b/NNProject1.Tests/NNProject1.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="HopfieldMatrixTests.cs" />
     <Compile Include="MatrixTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
