--- a/NNProject1.DataModel/NNProject1.DataModel.csproj
+++ b/NNProject1.DataModel/NNProject1.DataModel.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AssociativeMemory.cs" />
     <Compile Include="HopfieldMatrix.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestResult.cs" />
