Apply MVVM pattern and .NET convention standard

--- a/NNProject1.GUI/NNProject1.GUI.csproj
+++ b/NNProject1.GUI/NNProject1.GUI.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UI.Common\TextBoxBehaviour.cs" />
+    <Compile Include="UI.Common\ConsoleWriter.cs" />
+    <Compile Include="UI.Common\RelayCommand.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -101,6 +104,7 @@
       <Name>NNProject1.DataModel</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
